# motion-profiling

./: .gitattributes  .gitignore  LICENSE.matplotlib-cpp
MotionProfiling/: CMakeLists.txt  main.cpp  parse-args.h  test.csv
MotionProfiling/graphing/: graphing.cpp  graphing.h
MotionProfiling/lib/: path.cpp  path.h  spline.cpp  spline.h  velocity-profile.cpp  velocity-profile.h  waypoint.h
MotionProfiling/setup/: parse-args.cpp  parse-args.h
SplineMath/: SplineMath.tex
